<resources>
    <string name="app_name">Studhub</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_browse">Browse</string>
    <string name="menu_conversations">Conversations</string>
    <string name="menu_about">About</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="menu_messages">Messages</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>
