<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.studhub.app.ui.Home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_browse"
        android:name="com.studhub.app.ui.Browse.BrowseFragment"
        android:label="@string/menu_browse"
        tools:layout="@layout/fragment_browse" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.studhub.app.ui.About.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.studhub.app.ui.Cart.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/nav_messages"
        android:name="com.studhub.app.ui.Messages.MessagesFragment"
        android:label="@string/menu_messages"
        tools:layout="@layout/fragment_messages" />

</navigation>