<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_browse"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/menu_browse" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/icons8_shopping_cart_64"
            android:title="@string/menu_cart" />
        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_about" />
    </group>
</menu>